--- a/store/src/styles/navbar.scss
+++ b/store/src/styles/navbar.scss
@@ -4,17 +4,49 @@ nav{
     align-items: center;
     width:100%;
     height:5rem;
-    ul{
-        width: 100%;
+    .leftContent{
+        width: 50%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: center;
         list-style: none;
         li{
             display: flex;
+            justify-content: center;
             align-items: center;
+            width:0px;
             cursor: pointer;
+            border-radius: 100%;
+            transition: all 0.3s ease-in-out;
+            background-color: rgba(255, 153, 85, 0);
+            font-size: 1.2rem;
+            &:hover{
+                box-shadow: 0px 0px 100px 30px #FF9955;
+            }
         }
+    }
+    .rightContent{
+        width: 50%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        list-style: none;
+        li{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width:0px;
+            margin-right:20%;
+            cursor: pointer;
+            border-radius: 100%;
+            transition: all 0.3s ease-in-out;
+            background-color: rgba(255, 153, 85, 0);
+            font-size: 1.2rem;
+            &:hover{
+                box-shadow: 0px 0px 100px 30px #FF9955;
+            }
+        }
+
         img{
             cursor: pointer;
             width:2rem;
