--- a/store/src/styles/navbar.scss
+++ b/store/src/styles/navbar.scss
@@ -23,6 +23,11 @@ nav{
             &:hover{
                 box-shadow: 0px 0px 100px 30px #FF9955;
             }
+            a{
+                display: flex;
+                text-decoration: none;
+                color:black;
+            }
         }
     }
     .rightContent{
@@ -44,6 +49,11 @@ nav{
             font-size: 1.2rem;
             &:hover{
                 box-shadow: 0px 0px 100px 30px #FF9955;
+            }
+            a{
+                display: flex;
+                text-decoration: none;
+                color:black;
             }
         }
 
