--- a/store/src/styles/navbar.scss
+++ b/store/src/styles/navbar.scss
@@ -29,6 +29,29 @@ nav{
                 text-decoration: none;
                 color:black;
             }
+
+            button{
+                width:100px;
+                border: 2px solid black;
+                background-color: white;
+
+            }
+        }
+    }
+    .middleContent{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        input{
+            margin:1rem;
+            font-size:1.2rem;
+        }
+        button{
+            width:6rem;
+            height:2rem;
+            background-color: white;
+            border:2px solid black;
+            cursor: pointer;
         }
     }
     .rightContent{
