--- a/store/src/styles/clothes.scss
+++ b/store/src/styles/clothes.scss
@@ -1,29 +1,39 @@
 .clothesContainer{
     display:flex;
-    justify-content:space-around;
+    justify-content:flex-start;
+    flex-wrap: wrap;
     .productCard{
         display:flex;
+        flex-wrap: wrap;
+        width:20%;
         flex-direction: column;
-        background-color: orange;
-        justify-content: center;
+        background-color: white;
+        justify-content: space-between;
         align-items: center;
-        width:15rem;
         margin:2rem;
-        border-radius: 5px;
+        border: 2px solid black;
+        box-shadow: 10px 10px 10px 5px grey;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
         img{
-            height:10rem;
             margin:1rem;
             width:90%;
             border-radius:10px;
         }
+        p{
+            font-size: 1.2rem;
+        }
         button{
-            background:blue;
-            border:none;
+            background:white;
+            border:2px solid black;
             width:10rem;
             height:3rem;
             margin:1rem;
             font-size:1.5rem;
             cursor: pointer;
+        }
+        &:hover{
+            box-shadow: 10px 10px 10px 10px grey;
         }
         
     }
