--- a/store/src/styles/navbar.css
+++ b/store/src/styles/navbar.css
@@ -58,6 +58,37 @@ nav .leftContent li a {
   color: black;
 }
 
+nav .leftContent li button {
+  width: 100px;
+  border: 2px solid black;
+  background-color: white;
+}
+
+nav .middleContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav .middleContent input {
+  margin: 1rem;
+  font-size: 1.2rem;
+}
+
+nav .middleContent button {
+  width: 6rem;
+  height: 2rem;
+  background-color: white;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
 nav .rightContent {
   width: 50%;
   display: -webkit-box;
