added routing to details page

--- a/store/src/styles/clothes.css
+++ b/store/src/styles/clothes.css
@@ -10,6 +10,8 @@
 }
 
 .clothesContainer .productCard {
+  text-decoration: none;
+  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
