--- a/store/src/styles/clothes.scss
+++ b/store/src/styles/clothes.scss
@@ -2,40 +2,42 @@
     display:flex;
     justify-content:flex-start;
     flex-wrap: wrap;
-    .productCard{
-        display:flex;
-        flex-wrap: wrap;
-        width:20%;
-        flex-direction: column;
-        background-color: white;
-        justify-content: space-between;
-        align-items: center;
-        margin:2rem;
-        border: 2px solid black;
-        box-shadow: 10px 10px 10px 5px grey;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-        img{
-            margin:1rem;
-            width:90%;
-            border-radius:10px;
-        }
-        p{
-            font-size: 1.2rem;
-        }
-        button{
-            background:white;
-            border:2px solid black;
-            width:10rem;
-            height:3rem;
-            margin:1rem;
-            font-size:1.5rem;
+        .productCard{
+            text-decoration: none;
+            color:black;
+            display:flex;
+            flex-wrap: wrap;
+            width:20%;
+            flex-direction: column;
+            background-color: white;
+            justify-content: space-between;
+            align-items: center;
+            margin:2rem;
+            border: 2px solid black;
+            box-shadow: 10px 10px 10px 5px grey;
             cursor: pointer;
+            transition: all 0.3s ease-in-out;
+            img{
+                margin:1rem;
+                width:90%;
+                border-radius:10px;
+            }
+            p{
+                font-size: 1.2rem;
+            }
+            button{
+                background:white;
+                border:2px solid black;
+                width:10rem;
+                height:3rem;
+                margin:1rem;
+                font-size:1.5rem;
+                cursor: pointer;
+            }
+            &:hover{
+                box-shadow: 10px 10px 10px 10px grey;
+            }
+            
         }
-        &:hover{
-            box-shadow: 10px 10px 10px 10px grey;
-        }
-        
-    }
-
+   
 }
