--- a/store/src/styles/clothes.scss
+++ b/store/src/styles/clothes.scss
@@ -20,7 +20,7 @@
             img{
                 margin:1rem;
                 width:90%;
-                border-radius:10px;
+                max-height:20rem;
             }
             p{
                 font-size: 1.2rem;
