--- a/store/src/styles/home.scss
+++ b/store/src/styles/home.scss
@@ -5,6 +5,8 @@
     width: 100%;
     min-height:80vh;
     .card{
+        text-decoration: none;
+        color:black;
         display:flex;
         flex-direction: column;
         align-items: center;
