--- a/store/src/styles/cart.css
+++ b/store/src/styles/cart.css
@@ -11,4 +11,90 @@
           align-items: center;
   min-height: 70vh;
 }
+
+.cartContainer .cartCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 2px solid black;
+  width: 40%;
+  height: 10rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
+.cartContainer .cartCard .amount {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cartContainer .cartCard .amount h3 {
+  margin: 1rem;
+}
+
+.cartContainer .cartCard .amount .changeAmount {
+  cursor: pointer;
+}
+
+.cartContainer .cartCard .prodImage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cartContainer .cartCard .prodImage img {
+  width: 50%;
+  max-height: 8rem;
+}
+
+.cartContainer .cartCard .details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 30%;
+}
+
+.cartContainer .cartButtonContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.cartContainer .cartButtonContainer button {
+  cursor: pointer;
+  background-color: white;
+  border: 2px solid black;
+  height: 2rem;
+  margin: 0.5rem;
+}
 /*# sourceMappingURL=cart.css.map */
