--- a/store/src/styles/cart.scss
+++ b/store/src/styles/cart.scss
@@ -3,4 +3,53 @@
     flex-direction:column;
     align-items:center;
     min-height:70vh;
+    .cartCard{
+        display: flex;
+        justify-content: space-between;
+        border:2px solid black;
+        width:40%;
+        height:10rem;
+        margin:0.5rem;
+        padding:0.5rem;
+        .amount{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            h3{
+                margin:1rem;
+            }
+            .changeAmount{
+                cursor: pointer;
+            }
+        }
+        .prodImage{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                width: 50%;
+                max-height:8rem;
+            }
+        }
+        .details{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width:30%;
+        }
+      
+    }
+    .cartButtonContainer{
+        display:flex;
+        flex-direction: column;
+        button{
+            cursor: pointer;
+            background-color: white;
+            border:2px solid black;
+            height:2rem;
+            margin:0.5rem;
+
+        }
+    }
 }
