--- a/store/src/styles/navbar.css
+++ b/store/src/styles/navbar.css
@@ -140,4 +140,21 @@ nav .rightContent img {
   cursor: pointer;
   width: 2rem;
 }
+
+nav .rightContent .cartCount {
+  border-radius: 50%;
+  min-width: 1rem;
+  height: 1rem;
+  background-color: orange;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2px;
+}
 /*# sourceMappingURL=navbar.css.map */
