--- a/store/src/styles/cart.css
+++ b/store/src/styles/cart.css
@@ -97,4 +97,8 @@
   height: 2rem;
   margin: 0.5rem;
 }
+
+.cartContainer .cartButtonContainer .payButton {
+  display: none;
+}
 /*# sourceMappingURL=cart.css.map */
