--- a/store/src/styles/navbar.scss
+++ b/store/src/styles/navbar.scss
@@ -86,11 +86,11 @@ nav{
             width:2rem;
         }
         .cartCount{
+            display: none;
             border-radius: 50%;
             min-width:1rem;
             height:1rem;
             background-color: orange;
-            display: flex;
             justify-content: center;
             align-items: center;
             padding:2px;
