--- a/store/src/styles/cart.scss
+++ b/store/src/styles/cart.scss
@@ -45,6 +45,9 @@
         display:flex;
         flex-direction: column;
         button{
+            display:flex;
+            justify-content: center;
+            align-items: center;
             cursor: pointer;
             background-color: white;
             border:2px solid black;
@@ -52,8 +55,18 @@
             margin:0.5rem;
 
         }
-        .payButton{
-            display:none;
+        a{
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            background-color: white;
+            border:2px solid black;
+            height:2rem;
+            margin:0.5rem;
+            text-decoration: none;
+            color:black;
+
         }
     }
 }
