--- a/store/src/styles/cart.css
+++ b/store/src/styles/cart.css
@@ -80,6 +80,26 @@
   width: 30%;
 }
 
+.cartContainer .cartCard .details .detailContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.cartContainer .cartCard .details .detailContent h3 {
+  margin: 0;
+}
+
 .cartContainer .cartButtonContainer {
   display: -webkit-box;
   display: -ms-flexbox;
