--- a/store/src/styles/cart.scss
+++ b/store/src/styles/cart.scss
@@ -38,6 +38,15 @@
             align-items: center;
             flex-direction: column;
             width:30%;
+            .detailContent{
+                display:flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                h3{
+                    margin:0;
+                }
+            }
         }
       
     }
