--- a/store/src/styles/navbar.scss
+++ b/store/src/styles/navbar.scss
@@ -78,6 +78,12 @@ nav{
                 display: flex;
                 text-decoration: none;
                 color:black;
+                p{
+                    display: flex;
+                    min-width:10rem;
+                    justify-content: center;
+                    align-items: center;
+                }
             }
         }
 
@@ -94,6 +100,7 @@ nav{
             justify-content: center;
             align-items: center;
             padding:2px;
+            margin-right:1rem;
         }
     }
     
